<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_action_beranda"
        android:title="@string/title_beranda" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_action_notifikasi"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_konsultasi"
        android:icon="@drawable/ic_action_konsultasi"
        android:title="@string/title_consultasi" />
    <item
        android:id="@+id/navigation_transaksi"
        android:icon="@drawable/ic_action_transaksi"
        android:title="@string/title_transaksi" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_action_profil"
        android:title="@string/tittle_profile" />



</menu>
